--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!-- make the webiste look like a flower with my photo as the center -->
 
-<a> Hello </a>
+<html>
+  <head>
+    <title>Welcome!</title>
+  </head>
+  
+  <body>
+    <h1>Hi, I'm Anusree Chittineni!</h1>  
+    
+    <p>This is my website!</p> 
+  </body>
+</html>
