--- a/projects_content.html
+++ b/projects_content.html
@@ -1,7 +1,7 @@
 <div class="projects-content">
     <h4>Ongoing</h4>
 
-    <h5><em>Memory-Efficient Robocentric Map Storage for Real-Time Autonomous Navigation </em>(Master's Project)</h5>
+    <h5>Memory-Efficient Robocentric Map Storage for Real-Time Autonomous Navigation <em>(Master's Project)</em></h5>
 
     <h4>Personal</h4>
         <ul>
