--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Anusree's Website</title>
+    <title>Anusree Chittineni</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   
